--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="container"></div>
 </p>
 
-<script src="./index.js"></script>
+<script type="module" src="./index.js"></script>
 <script>
 
 </script>
